Bug 1400148 - Don't use -1 to represent an unset nsCursor. r=karlt.

Because UBSan complains about casting -1:

> runtime error: load of value 4294967295, which is not a valid value for type 'nsCursor'